<resources>
    <string name="app_name">Network Security</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enter_txt">Enter text here </string>
    <string name="ed_txt_en_dn">Enter Plain Text</string>
    <string name="dn_cipher_text">Enter Cipher Text</string>
    <string name="en_dn_btn">Encrypt &amp; Decrypt </string>
    <string name="en_btn">Encrypt</string>
    <string name="dn_btn">Decrypt</string>
    <string name="cipher_text">Cipher Text</string>
    <string name="plain_text">Plain Text</string>

    <string name="ed_txt_en_e">Enter e </string>
    <!--    <stirng name="ed_txt_en_n">Enter n</stirng>-->
    <string name="enter_public_keys_detail">Enter Public Key\'s Details</string>
    <string name="ed_txt_en_n">Enter n</string>
    <string name="txt_en_e">Enter e</string>
    <string name="ed_txt_dn_d">Enter d</string>
    <string name="ed_txt_dn_n">Enter n</string>
    <string name="enter_private_key_detail">Enter Private Key\'s Details</string>

    <string name="generate_key">Generate Key</string>
    <string name="private_key">Private Key</string>
    <string name="public_key">Public Key</string>
</resources>