<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c5_sky_light"
    android:orientation="vertical"
    tools:context=".encryptFragment"
    android:gravity="center"
    >


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@color/c3_normal"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


            <TextView
                    android:id="@+id/en_txt_view_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"

                    android:text="@string/ed_txt_en_dn"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/refresh_logo"
                    android:background="@color/c3_normal"
                    android:hint="@String/copy"
                    android:id="@+id/en_img_refresh"

                    >

                </ImageView>

            </LinearLayout>

                <EditText
                    android:id="@+id/en_ed_txt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:hint="@string/enter_txt"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/en_txt_key_details"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:text="@string/enter_public_keys_detail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/en_txt_view_e"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"

                        android:text="@string/txt_en_e"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        android:layout_weight="3"
                        />
                    <EditText
                        android:id="@+id/en_ed_txt_e"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@color/white"
                        android:hint="@string/txt_en_e"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black"
                        android:layout_weight="5"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/en_txt_view_n"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_gravity="center"

                        android:text="@string/ed_txt_en_n"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        android:layout_weight="3"
                        />
                    <EditText
                        android:id="@+id/en_ed_txt_n"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:background="@color/white"
                        android:hint="@string/ed_txt_en_n"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black"
                        android:layout_weight="5"
                        />

                </LinearLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <TextView
                        android:id="@+id/en_txt_view_cipher_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/cipher_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:gravity="right"
                        android:src="@drawable/copy_image"
                        android:hint="@String/copy"
                        android:id="@+id/en_img_copy"

                        >

                    </ImageView>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:gravity="right"
                        android:src="@drawable/share_logo"
                        android:hint="@String/copy"
                        android:id="@+id/en_img_share"
                        >

                    </ImageView>


                </LinearLayout>
<!--                <TextView-->
<!--                    android:id="@+id/en_txt_view_cipher_txt"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:text=""-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--                    android:textStyle="bold" />-->
                <TextView
                    android:id="@+id/en_txt_view_cipher_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />



            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"

        >
        <Button
            android:id="@+id/en_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/en_btn"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:backgroundTint="@color/c2_medium"




            />


    </LinearLayout>





</LinearLayout>