<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".decryptFragment"
    android:background="@color/c5_sky_light"
    android:orientation="vertical"
    android:gravity="center"
    >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_dn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@color/c3_normal"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


            <TextView
                    android:id="@+id/dn_txt_view_plain_text"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"

                    android:text="@string/dn_cipher_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/refresh_logo"
                    android:background="@color/c3_normal"
                    android:hint="@String/copy"
                    android:id="@+id/dn_img_refresh"

                    >

                </ImageView>



            </LinearLayout>
                <EditText
                    android:id="@+id/dn_ed_txt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:hint="@string/enter_txt"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/black"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:id="@+id/dn_txt_key_details"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:text="@string/enter_private_key_detail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/dn_txt_view_d"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center"

                            android:text="@string/ed_txt_dn_d"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold"
                            android:layout_weight="3"
                            />
                        <EditText
                            android:id="@+id/dn_ed_txt_d"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:hint="@string/ed_txt_dn_d"
                            android:inputType="number"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/black"
                            android:layout_weight="5"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/dn_txt_view_n"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center"

                            android:text="@string/ed_txt_dn_n"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold"
                            android:layout_weight="3"
                            />
                        <EditText
                            android:id="@+id/dn_ed_txt_n"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:hint="@string/ed_txt_dn_n"
                            android:inputType="number"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/black"
                            android:layout_weight="5"
                            />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >

                    <TextView
                        android:id="@+id/dn_txt_view_cipher_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/plain_text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:gravity="right"
                        android:src="@drawable/copy_image"
                        android:hint="@String/copy"
                        android:id="@+id/dn_img_copy"

                        >

                    </ImageView>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:gravity="right"
                        android:src="@drawable/share_logo"
                        android:hint="@String/copy"
                        android:id="@+id/dn_img_share"
                        >

                    </ImageView>


                </LinearLayout>

<!--                <TextView-->
<!--                    android:id="@+id/dn_txt_view_cipher_txt"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:text=""-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--                    android:textStyle="bold" />-->
                <TextView
                    android:id="@+id/dn_txt_view_cipher_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

<!--                <TextView-->
<!--                    android:id="@+id/txt_view_dnout"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:text=""-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--                    android:textStyle="bold" />-->

<!--                <TextView-->
<!--                    android:id="@+id/txt_view_dnout2"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->


<!--                    android:text=""-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--                    android:textStyle="bold" />-->


            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"

        >
        <Button
            android:id="@+id/dn_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/dn_btn"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:backgroundTint="@color/c2_medium"




            />


    </LinearLayout>


</LinearLayout>